<resources>

    <!-- Основные названия в приложении. -->
    <string name="app_name">МедКлик</string>
    <string name="Далее">Далее</string>
    <string name="Назад">Назад</string>

    <!-- Авторизация. -->
    <string name="Начнём">Начнём!</string>
    <string name="Приветствие">Добро пожаловать в МедКлик!</string>
    <string name="Приветсвие_описание">Добро пожаловать в наше приложение. Здесь вы можете получить онлайн-консультацию врача, а также записаться на приём в болницу.</string>
    <string name="Обработка_ПД">Авторизируясь, вы принимаете:</string>
    <string name="Обработка_ПД_2_часть">Пользовательское соглашение, а также согласие на обработку персональных данных</string>
    <string name="Авторизация">Авторизация</string>
    <string name="Выбор_способа">Выберете удобный способ входа</string>
    <string name="Телефон">Номер телефона</string>
    <string name="Гос">Через Госуслуги</string>
    <string name="ГосУслуги">Через Госуслуги</string>

    <string name="Код_страны">+7</string>
    <string name="Телефон_текст">Телефон</string>
    <string name="Подтверждение_телефона">Введите ваш номер телефона, мы вышлем вам код подтверждения</string>

    <string name="Код">Код</string>
    <string name="Подтверждение_кода">Введите код подтверждения, который мы вам отправили</string>
    <string name="Время_на_подтверждение1">Отравить код повторно через</string>
    <string name="Время_на_подтверждение2">сек</string>
    <string name="Отправить_повторно">Отравить код повторно</string>

    <string name="Данные">Ваши данные</string>
    <string name="Данные_уточнение">Для завершения регистрации нам нужно собрать данные о вас</string>
    <string name="Имя">Имя:</string>
    <string name="Фамилия">Фамилия:</string>
    <string name="Дата_рождения">Дата рождения:</string>
    <string name="Не_все_поля">* Заполните обязательные поля</string>
    <string name="Полис">Полис ОМС (не обязательно):</string>

    <!-- Меню чата. -->
    <string name="Поиск">Поиск</string>
    <string name="Вложения">Вложения</string>
    <string name="Удалить_чат">Удалить чат</string>

    <!-- Диалоги -->
    <string name="Все_сообщения">Все сообщения</string>
    <string name="Контакты">Контакты</string>
    <string name="Напишите_что_нибудь">Напишите что-нибудь</string>

    <!-- Нижний бар -->
    <string name="Main_page">Главная</string>
    <string name="Chats_page">Диалоги</string>
    <string name="Profile_page">Профиль</string>

    <!-- Чат -->
    <string name="В_контакты">В контакты</string>

    <!-- Поиск докторов -->
    <string name="По_специальностям">По специальностям</string>
    <string name="По_врачам">По врачам</string>
    <string name="Поиск_">Поиск по специальностям</string>

    <!-- Вложения -->
    <string name="вложения">Вложения</string>
    <string name="Фотографии">Фотографии</string>
    <string name="Документы">Документы</string>

    <!-- Переход к консультации -->
    <string name="Консультация_воскл">Консультация!</string>
    <string name="Перейти">Перейти</string>

    <!-- Карточка доктора -->
    <string name="Рыбаков_Александр_Витальевич">Рыбаков Александр Витальевич</string>
    <string name="Профессии_название">Профессия</string>
    <string name="Стаж">Стаж</string>
    <string name="Стоимость">Стоимость</string>
    <string name="Формат_оказания_услуги">Формат оказания услуги</string>
    <string name="Время_работы">Время работы</string>
    <string name="Образование">Образование</string>
    <string name="Дополнительная_информация">Дополнительная информация</string>

    <!-- История лечения -->
    <string name="История_лечений">История лечений</string>
    <string name="консультация_номер">Консультация №</string>
    <string name="Врач">Врач</string>

    <!-- редактирование профиля (доХтАр) -->
    <string name="данные_уточнение_для_доктора">Эти данные видны клиенту при выборе врача. Для редактирования нажмите на нужное поле. Некоторые данные может изменять только системный администратор.</string>
    <string name="Сохранить">Сохранить</string>

    <!-- Главная -->
    <string name="Главная">Главная</string>
    <string name="Подбор_специалиста">Нажмите, чтобы подобрать специалиста</string>
    <string name="Получить_консультацию">Получить консультацию</string>

    <string name="Соглашение">Пользовательское соглашение</string>

    <string name="Соглашение_текст">Настоящее Пользовательское Соглашение (Далее Соглашение) регулирует отношения между владельцем medclick.ru (далее МедКлик или Администрация) с одной стороны и пользователем сайта с другой.
   Сайт МедКлик не является средством массовой информации.

        Используя сайт, Вы соглашаетесь с условиями данного соглашения.
Если Вы не согласны с условиями данного соглашения, не используйте сайт МедКлик!

Предмет соглашения
Администрация предоставляет пользователю право на размещение на сайте следующей информации:

Предмет соглашения
Администрация предоставляет пользователю право на размещение на сайте следующей информации:
- Текстовой информации
- Аудиоматериалов
- Видеоматериалов
- Фотоматериалов
- Ссылок на материалы, размещенные на других сайтах

Права и обязанности сторон
Пользователь имеет право:
- осуществлять поиск информации на сайте
- получать информацию на сайте
- использовать информацию сайта в личных некоммерческих целях

Администрация имеет право:
- по своему усмотрению и необходимости создавать, изменять, отменять правила
- ограничивать доступ к любой информации на сайте

Пользователь обязуется:
- не нарушать работоспособность сайта
- не использовать скрипты (программы) для автоматизированного сбора информации и/или взаимодействия с Сайтом и его Сервисами

Администрация обязуется:
- поддерживать работоспособность сайта за исключением случаев, когда это невозможно по независящим от Администрации причинам.

Ответственность сторон
- администрация не несет никакой ответственности за услуги, предоставляемые третьими лицами
- в случае возникновения форс-мажорной ситуации (боевые действия, чрезвычайное положение, стихийное бедствие и т. д.) Администрация не гарантирует сохранность информации, размещённой Пользователем, а также бесперебойную работу информационного ресурса

Условия действия Соглашения
Данное Соглашение вступает в силу при любом использовании данного сайта.
Соглашение перестает действовать при появлении его новой версии.
Администрация оставляет за собой право в одностороннем порядке изменять данное соглашение по своему усмотрению.
Администрация не оповещает пользователей об изменении в Соглашении.


Соглашение разработано на базе юридических документов сервиса Правилль</string>

    <string name="соглашение_текст"></string>

    <string-array name="proffessions_string_array">
        <item>Окулист</item>
        <item>Хирург</item>
        <item>Психолог</item>
        <item>Кардиолог</item>
    </string-array>

</resources>