<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/water"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="365dp"
        android:background="@drawable/flow_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/Авторизация"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="74dp"
            android:fontFamily="@font/manrope_light"
            android:text="@string/Выбор_способа"
            android:textColor="@color/thin_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="123dp"
            android:background="@drawable/btn2"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:cornerRadius="30dp"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_chat_1"
            tools:layout_editor_absoluteX="69dp"
            tools:layout_editor_absoluteY="138dp" />

        <View
            android:id="@+id/view"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="123dp"
            android:background="@drawable/btn2"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:cornerRadius="30dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/next_btn1"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn1"
            android:drawableEnd="@drawable/ic_next"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/Далее"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:backgroundTint="@color/btnStartColor"
            app:backgroundTintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn1"
            android:drawableLeft="@drawable/ic_back"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/Назад"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:backgroundTint="@color/back_btn"
            app:backgroundTintMode="src_over"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:srcCompat="@drawable/ic_gos_logo" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="107dp"
            android:layout_height="38dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/Телефон"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view2" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="107dp"
            android:layout_height="38dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/Гос"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/view" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>