<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/water"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:background="@drawable/flow_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/Телефон_текст"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="44dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="77dp"
            android:fontFamily="@font/manrope_light"
            android:text="@string/Подтверждение_телефона"
            android:textColor="@color/thin_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/next_btn2"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn1"
            android:drawableEnd="@drawable/ic_next"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/Далее"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:backgroundTint="@color/btnStartColor"
            app:backgroundTintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/back_btn2"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn1"
            android:drawableLeft="@drawable/ic_back"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/Назад"
            android:textAllCaps="false"
            android:textColor="@color/btnStartColor"
            android:textSize="15sp"
            app:backgroundTint="@color/back_btn"
            app:backgroundTintMode="src_over"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="228dp"
            android:layout_height="39dp"
            android:layout_marginStart="102dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/gray_view"
            android:elevation="2dp"
            android:ems="10"
            android:fontFamily="@font/manrope_light"
            android:hint="Номер телефона"
            android:inputType="number"
            android:paddingStart="18dp"
            android:singleLine="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/region_input"
            android:layout_width="57dp"
            android:layout_height="39dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/gray_view"
            android:elevation="2dp"
            android:ems="10"
            android:fontFamily="@font/manrope_light"
            android:inputType="phone"
            android:singleLine="false"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:targetApi="lollipop" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>